--- a/hztb/Base.lproj/Main.storyboard
+++ b/hztb/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--App Entry-->
@@ -16,11 +17,63 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-412" y="192"/>
+        </scene>
+        <!--Registration-->
+        <scene sceneID="6GJ-Ur-o9w">
+            <objects>
+                <viewController storyboardIdentifier="sib_RegistrationViewController" id="rxk-hW-F2R" customClass="VCRegistration" customModule="hztb" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="NnC-mA-Qlz"/>
+                        <viewControllerLayoutGuide type="bottom" id="FXT-dg-y2s"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="AIJ-A1-OGN">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6V0-j6-r94">
+                                <rect key="frame" x="20" y="72" width="46" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="46" id="FAJ-Fx-wgC"/>
+                                    <constraint firstAttribute="height" constant="30" id="gWS-1M-aGy"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="6V0-j6-r94" firstAttribute="leading" secondItem="AIJ-A1-OGN" secondAttribute="leadingMargin" id="618-aW-uQM"/>
+                            <constraint firstItem="6V0-j6-r94" firstAttribute="top" secondItem="NnC-mA-Qlz" secondAttribute="bottom" constant="8" id="PvM-sg-fIo"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Registration" id="Yda-Qv-NgP"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ihe-Zi-S5S" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1320" y="-530"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="2VW-rL-GVg">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="YRm-TV-cZJ" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="NXj-n7-4Hf">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="rxk-hW-F2R" kind="relationship" relationship="rootViewController" id="M2j-2J-Lzm"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="63n-H8-sfe" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="508" y="-530"/>
         </scene>
     </scenes>
 </document>
