parsing json countries

--- a/hztb/Base.lproj/Main.storyboard
+++ b/hztb/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--App Entry-->
@@ -34,13 +35,62 @@
                     <view key="view" contentMode="scaleToFill" id="AIJ-A1-OGN">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gil-ff-y3a">
+                                <rect key="frame" x="20" y="72" width="560" height="30"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="Scn-2b-bZn"/>
+                                </constraints>
+                                <state key="normal" title="Country"/>
+                                <connections>
+                                    <segue destination="6ZA-LH-rX2" kind="show" id="PMj-Wx-ehE"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="gil-ff-y3a" firstAttribute="top" secondItem="NnC-mA-Qlz" secondAttribute="bottom" constant="8" id="8B5-Lz-8qr"/>
+                            <constraint firstItem="gil-ff-y3a" firstAttribute="leading" secondItem="AIJ-A1-OGN" secondAttribute="leadingMargin" id="d9I-SO-SSK"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="gil-ff-y3a" secondAttribute="trailing" id="wut-NR-umA"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Registration" id="Yda-Qv-NgP"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ihe-Zi-S5S" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1320" y="-530"/>
+        </scene>
+        <!--Country-->
+        <scene sceneID="61O-Zx-TMC">
+            <objects>
+                <viewController id="6ZA-LH-rX2" customClass="VCCountrySelection" customModule="hztb" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="SHT-lm-AMF"/>
+                        <viewControllerLayoutGuide type="bottom" id="fkR-nC-nXs"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="oK1-lT-x7Y">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="yyy-mM-Glo">
+                                <rect key="frame" x="20" y="64" width="560" height="536"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="yyy-mM-Glo" firstAttribute="top" secondItem="SHT-lm-AMF" secondAttribute="bottom" id="OYL-FP-4Zx"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="yyy-mM-Glo" secondAttribute="trailing" id="UNc-7R-0fU"/>
+                            <constraint firstItem="fkR-nC-nXs" firstAttribute="top" secondItem="yyy-mM-Glo" secondAttribute="bottom" id="Vmq-sr-9SV"/>
+                            <constraint firstItem="yyy-mM-Glo" firstAttribute="leading" secondItem="oK1-lT-x7Y" secondAttribute="leadingMargin" id="fDZ-6P-Efb"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Country" id="Lw7-lz-jQS"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GzW-3f-A9J" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2034" y="-680"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="2VW-rL-GVg">
