wip, OTP confirmation screen

--- a/hztb/Base.lproj/Main.storyboard
+++ b/hztb/Base.lproj/Main.storyboard
@@ -93,7 +93,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ihe-Zi-S5S" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1320" y="-530"/>
+            <point key="canvasLocation" x="1322" y="-1094"/>
         </scene>
         <!--Country-->
         <scene sceneID="61O-Zx-TMC">
@@ -137,7 +137,25 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GzW-3f-A9J" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2034" y="-680"/>
+            <point key="canvasLocation" x="2045" y="-1094"/>
+        </scene>
+        <!--Conf-->
+        <scene sceneID="hz1-ec-vdv">
+            <objects>
+                <viewController storyboardIdentifier="sib_OTPConfVC" id="nyh-AE-zUx" customClass="VCOTPConf" customModule="hztb" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="2Rr-i0-TpJ"/>
+                        <viewControllerLayoutGuide type="bottom" id="3O9-hB-yXa"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="wbb-K0-gT8">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vaj-jK-V7h" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1322" y="-421"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="2VW-rL-GVg">
@@ -151,6 +169,7 @@
                     <nil name="viewControllers"/>
                     <connections>
                         <segue destination="rxk-hW-F2R" kind="relationship" relationship="rootViewController" id="M2j-2J-Lzm"/>
+                        <segue destination="nyh-AE-zUx" kind="show" id="RNk-c1-2Qz"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="63n-H8-sfe" userLabel="First Responder" sceneMemberID="firstResponder"/>
